--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
             <p style="margin: 2px; font-size: 15px">
-              Hola, __nombre__ <br>
+              Estimada alumna: <br>
             </p>
             <br/>
 
@@ -70,7 +70,7 @@
 
       <tr>
         <td style="padding: 0">
-          <img style="padding: 0; display: block" src="https://raw.githubusercontent.com/Andrea585976/mailing-html/main/cartel.jpg" width="100%">
+          <img style="padding: 0; display: block; border-top: 10px solid #ecf0f1" src="https://raw.githubusercontent.com/Andrea585976/mailing-html/main/cartel%20itinerario.jpeg" width="100%">
         </td>
       </tr>
 
