correo de recodatorio

--- a/recordatorio.html
+++ b/recordatorio.html
@@ -23,12 +23,12 @@
 
 
             <p style="margin: 2px; font-size: 15px">
-              Estimada alumna: <br>
+              Estimada alumn@: <br>
             </p>
             <br/>
 
             <p style="margin: 2px; font-size: 15px">
-              Esperamos que tú y tus seres queridos se encuentren muy bien. Por este medio nos complace invitarte al lanzamiento del primer <strong>capítulo estudiantil ACM-W</strong> de la Universidad Nacional Autónoma de México que se llevará a cabo el <strong>6 de mayo de 2021 a las 6:00 pm</strong> a través de nuestras cuentas de Facebook y YouTube.
+              Te recordamos que el lanzamiento del nuevo capítulo estudiantil ACM-W UNAM se llevará a cabo el próximo 6 de mayo de 2021 a las 6:00 pm a través de nuestras plataformas de Facebook y YouTube. 
 
             </p>
             <br/>
@@ -40,22 +40,9 @@
             <br/>
             
             <p style="margin: 2px; font-size: 15px">
-              Agradeceremos tu participación en este evento y aprovechamos para invitarte a seguirnos apoyando en esta iniciativa que busca incentivar a más mujeres en la computación.
+              <strong> ¡Te esperamos!¡No faltes! <strong>
             </p>
 
-            <br/>
-
-            <p style="margin: 2px; font-size: 15px">
-              Te mandamos nuestros mejores deseos.
-            </p>
-
-            <br/>
-
-            <p style="margin: 2px; font-size: 15px; text-align: center">
-              <strong> Atentamente: </strong> <br/>
-              El equipo de ACM-W UNAM
-            </p>
-            
           </div>
         </td>
       </tr>
