--- a/recordatorio.html
+++ b/recordatorio.html
@@ -39,7 +39,7 @@
 
             <br/>
             
-            <p style="margin: 2px; font-size: 15px">
+            <p style="margin: 2px; font-size: 15px; text-align:center">
               <strong> ¡Te esperamos!¡No faltes! <strong>
             </p>
 
